--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "or": "^0.2.0",
     "react": "^19.0.0",
